--- a/apps.html
+++ b/apps.html
@@ -22,7 +22,7 @@
 
     <div class="container">
         <h1 class="rgb-text">Our apps are here!</h1>
-        <a href="apps/random_generator_gui.exe" class="download-button">Random Number Generator</a>
+        <a href="random_generator_gui.exe" class="download-button">Random Number Generator</a>
         <a href="page not found error 404.html" class="download-button">In development</a>
         <a href="page not found error 404.html" class="download-button">In development</a>
         <a href="page not found error 404.html" class="download-button">In development</a>
