--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,25 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>littleapps · Contact Us</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<nav>
+    <div class="nav-content">
+        <h2 class="rgb-text">littleapps</h2>
+        <div class="nav-buttons">
+            <a href="index.html" class="rgb-text">Home</a>
+            <a href="about.html" class="rgb-text">About Us</a>
+            <a href="apps.html" class="rgb-text">Apps</a>
+            <a href="contact.html" class="rgb-text">Contact Us</a>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <h2>Contact us</h2>
+    <p>Here are our contacts. As soon as you write to us, we will write back to you in the next <strong>48 hours</strong>.<br>
+      <a href="https://discord.gg/DhpuKuqjjw">Discord</a><br>
+      <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJqXPSDnJDWMBnxTwKqFJMhBgBhVcgMwknwwsxSWqjQhrQBTljqVgWnwLRJQpngHKRXqLJV">Gmail</a></p>
+  </div>
