--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,6 @@
 <div class="container">
     <h2>Contact us</h2>
     <p>Here are our contacts. As soon as you write to us, we will write back to you in the next <strong>48 hours</strong>.<br>
-      <a href="https://discord.gg/DhpuKuqjjw" class="download-button">Discord</a><br>
+      <a href="https://discord.gg/DhpuKuqjjw" class="download-button">Discord</a>
       <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJqXPSDnJDWMBnxTwKqFJMhBgBhVcgMwknwwsxSWqjQhrQBTljqVgWnwLRJQpngHKRXqLJV" class="download-button">Gmail</a></p>
   </div>
