--- a/otheros.html
+++ b/otheros.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>littleapps · Apps</title>
+    <title>littleapps · Other Operating System</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
 <nav>
     <div class="nav-content">
         <h2 class="rgb-text">littleapps</h2>
@@ -20,13 +18,10 @@
         </div>
     </div>
 </nav>
-
-    <div class="container">
-        <h1 class="rgb-text">Our apps are here!</h1>
-        <a href="apps/random_generator_gui.exe" class="download-button">Random Number Generator</a>
-        <a href="page not found error 404.html" class="download-button">In development</a>
-        <a href="page not found error 404.html" class="download-button">In development</a>
-        <a href="page not found error 404.html" class="download-button">In development</a>
-    </div>
+<div class="container">
+    <h2>Other Operating System</h2>
+    <p>Of course we're not just for <strong>Windows</strong>! We're also for <strong>Linux</strong> and we're trying to get our apps on <strong>Android</strong> too!<br>
+      <a href="siaom550.github.io/littleapps-for-linux-" class="download-button">Linux</a></p>
+</div>
 </body>
 </html>
