--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
             <a href="about.html" class="rgb-text">About Us</a>
             <a href="apps.html" class="rgb-text">Apps</a>
             <a href="contact.html" class="rgb-text">Contact Us</a>
+            <a href="otheros.html" class="rgb-text">Other OS</a>
         </div>
     </div>
 </nav>
