--- a/otheros.html
+++ b/otheros.html
@@ -21,7 +21,7 @@
 <div class="container">
     <h2>Other Operating System</h2>
     <p>Of course we're not just for <strong>Windows</strong>! We're also for <strong>Linux</strong> and we're trying to get our apps on <strong>Android</strong> too!<br>
-      <a href="siaom550.github.io/littleapps-for-linux-" class="download-button">Linux</a></p>
+      <a href="https://siaom550.github.io/littleapps-for-linux-/" class="download-button">Linux</a></p>
 </div>
 </body>
 </html>
